Use ghc::filesystem::path for file paths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,4 +139,6 @@ add_compile_definitions(TIXML_USE_STL)
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/tinyxml"
                  "${CMAKE_CURRENT_BINARY_DIR}/tinyxml" EXCLUDE_FROM_ALL)
 
+add_subdirectory("${PROJECT_SOURCE_DIR}/lib/filesystem")
+
 add_subdirectory(src)
