--- a/VGMTrans_WTL.vcxproj
+++ b/VGMTrans_WTL.vcxproj
@@ -272,6 +272,7 @@
     <ClCompile Include="src\main\formats\HudsonSnesInstr.cpp" />
     <ClCompile Include="src\main\formats\HudsonSnesScanner.cpp" />
     <ClCompile Include="src\main\formats\HudsonSnesSeq.cpp" />
+    <ClCompile Include="src\main\formats\ItikitiSnesInstr.cpp" />
     <ClCompile Include="src\main\formats\ItikitiSnesScanner.cpp" />
     <ClCompile Include="src\main\formats\ItikitiSnesSeq.cpp" />
     <ClCompile Include="src\main\formats\KonamiPS1Scanner.cpp" />
@@ -476,6 +477,7 @@
     <ClInclude Include="src\main\formats\HudsonSnesScanner.h" />
     <ClInclude Include="src\main\formats\HudsonSnesSeq.h" />
     <ClInclude Include="src\main\formats\ItikitiSnesFormat.h" />
+    <ClInclude Include="src\main\formats\ItikitiSnesInstr.h" />
     <ClInclude Include="src\main\formats\ItikitiSnesScanner.h" />
     <ClInclude Include="src\main\formats\ItikitiSnesSeq.h" />
     <ClInclude Include="src\main\formats\KonamiPS1Format.h" />
