--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,9 +2,9 @@ task:
     name: FreeBSD
     freebsd_instance:
         matrix:
-            image_family: freebsd-12-2
-            image_family: freebsd-13-0
+            image_family: freebsd-12-3
+            image_family: freebsd-13-1
 
     install_script: pwd && ls -la && pkg update --force && pkg install -y cmake ninja qt5-widgets qt5-qmake qt5-svg qt5-buildtools minizip fluidsynth
     
-    compile_script: mkdir build && cd build && cmake -GNinja .. && ninja
+    compile_script: && cmake -B build -GNinja . && cmake --build build --parallel
