--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,6 +5,6 @@ task:
             image_family: freebsd-12-3
             image_family: freebsd-13-1
 
-    install_script: pwd && ls -la && pkg update --force && pkg install -y cmake ninja qt5-widgets qt5-qmake qt5-svg qt5-buildtools minizip fluidsynth
+    install_script: pwd && ls -la && pkg update --force && pkg install -y cmake ninja qt6-base qt6-svg minizip fluidsynth
     
     compile_script: cmake -B build -GNinja . && cmake --build build --parallel
