--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,11 @@
 add_subdirectory(main)
+
 if(ENABLE_UI_QT)
   message(STATUS "Building UI (Qt)")
   add_subdirectory(ui/qt)
+endif()
+
+if(ENABLE_CLI)
+  message(STATUS "Building CLI application")
+  add_subdirectory(ui/cli)
 endif()
