--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,9 +2,8 @@ task:
     name: FreeBSD
     freebsd_instance:
         matrix:
-            image_family: freebsd-12-3
-            image_family: freebsd-13-1
+            image_family: freebsd-12-4
+            image_family: freebsd-13-2
 
-    install_script: pwd && ls -la && pkg update --force && pkg install -y cmake ninja qt6-base qt6-svg minizip fluidsynth
-    
+    install_script: pwd && ls -la && pkg update --force && pkg install -y cmake ninja qt6-base qt6-svg minizip
     compile_script: cmake -B build -GNinja . && cmake --build build --parallel
