--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   macos_x64:
     name: macOS (Intel)
-    runs-on: macos-11
+    runs-on: macos-12
     env:
       osx_min_ver: "11.0"
       osx_arch: "x86_64"
@@ -11,11 +11,16 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Install dependencies"
         run: |
-          brew upgrade qt@5 || brew install qt@5
+          brew upgrade qt@5 ninja || brew install qt@5 ninja
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
           echo "/usr/local/bin" >> $GITHUB_PATH
       - name: "Prepare build"
-        run: cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=${{ env.osx_min_ver }} -DCMAKE_OSX_ARCHITECTURES=${{ env.osx_arch }} -DCMAKE_BUILD_TYPE=Release -B build
+        run: |
+          cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=${{ env.osx_min_ver }} \
+                -DCMAKE_OSX_ARCHITECTURES=${{ env.osx_arch }} \
+                -DCMAKE_BUILD_TYPE=Release \
+                -G Ninja \
+                -B build
       - name: "Build project"
         run: cmake --build build --config "Release" --parallel
       - working-directory: "build"
@@ -27,7 +32,7 @@ jobs:
           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ env.osx_arch }}-${{ runner.os }}.dmg
           path: "build/bin/VGMTrans.dmg"
   Ubuntu:
-    runs-on: ubuntu-18.04 # Bump to 20.04 once 18.04 goes out of support
+    runs-on: ubuntu-20.04
     name: Linux
     steps:
       - uses: actions/checkout@v3
@@ -36,13 +41,12 @@ jobs:
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
       - name: "Install dependencies"
         run: |
-          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-bionic -y
-          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -
-          sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic main" -y
-          sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-16 main" -y
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 16
           sudo apt-get update && sudo apt-get upgrade -y
           sudo apt-get install -y pkg-config clang-16 lld-16 ninja-build \
-            qt515base qt515svg qt515wayland libgl1-mesa-dev \
+            qt5base qt5base-dev libqt5svg5-dev libqt5svg5 libqt5waylandclient5 libqt5waylandclient5-dev libqt5waylandcompositor5 libqt5waylandcompositor5-dev libgl1-mesa-dev \
             libjack-dev libsndfile1-dev libpulse-dev
       - name: "Prepare build"
         run: cmake -DCMAKE_C_COMPILER="clang-16" -DCMAKE_CXX_COMPILER="clang++-16" -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -GNinja -B build
